Replace wrapping div in header. Remove fixed width in broker description. Add close mobile menu on scroll.

--- a/src/layouts/OurTeam/OurTeam.scss
+++ b/src/layouts/OurTeam/OurTeam.scss
@@ -7,7 +7,7 @@
 
 .description {
     height: 48px;
-    width: 340px;
+    width: 100%;
     margin-bottom: 24px;
 }
 
