--- a/src/scss/_site-navbar.scss
+++ b/src/scss/_site-navbar.scss
@@ -216,7 +216,6 @@
 	@media(min-width:390px) {
 	
 	width: 300px;
-	height: fit-content;
 	position: fixed;
 	right: 0;
 	z-index: 2000;
@@ -273,7 +272,7 @@
 
 	.site-mobile-menu-body {
 		overflow-y: scroll;
-  	-webkit-overflow-scrolling: touch;
+  		-webkit-overflow-scrolling: touch;
 		position: relative;
 		padding: 0 20px 20px 20px;
 		height: fit-content;
